src/css/App.css
@import url("https://fonts.googleapis.com/css2?family=Pangolin&display=swap");

#root {
  display: block;
  margin: 0 auto;
  padding: 0;
  text-align: center;
  width: 100%;
  min-height: 100vh;
  background-color: rgb(85, 35, 12);
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 2000 1000' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch' /%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.2'%0A/%3E%3C/svg%3E%0A");
}

body {
  font-family: 'Pangolin', system-ui, Avenir, Helvetica, Arial, sans-serif !important;
}

svg {
  width: 100vw;
  height: 100vh;
}

.content-wrapper {
  position: relative;
  z-index: 1;
}

.navbar {
    max-height: fit-content;
}

@media (max-width: 576px) {
  .navbar {
    background-color: rgb(85, 35, 12);
  }
} 

